src/main/java/ch/sama/sql/dialect/tsql/grammar/antlr/SqlParser.java
// Generated from C:\Dev\Dropbox\Workspace\JavaSQL2\src\main\java\ch\sama\sql\dialect\tsql\grammar\antlr\Sql.g4 by ANTLR 4.3
package ch.sama.sql.dialect.tsql.grammar.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__16=1, T__15=2, T__14=3, T__13=4, T__12=5, T__11=6, T__10=7, T__9=8, 
		T__8=9, T__7=10, T__6=11, T__5=12, T__4=13, T__3=14, T__2=15, T__1=16, 
		T__0=17, Whitespace=18, Newline=19, LineComment=20, Select=21, From=22, 
		Where=23, Join=24, Order=25, As=26, On=27, By=28, Asc=29, Desc=30, And=31, 
		Or=32, Null=33, Left=34, Right=35, Inner=36, Full=37, Cross=38, Not=39, 
		Like=40, Is=41, With=42, Union=43, All=44, Int=45, Float=46, Datetime=47, 
		Varchar=48, Max=49, Identifier=50, IntegerConstant=51, FloatingConstant=52, 
		StringLiteral=53;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'.*'", "'>='", "'['", "'<'", "'='", "']'", "'>'", 
		"'<='", "'<>'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "Whitespace", 
		"Newline", "LineComment", "Select", "From", "Where", "Join", "Order", 
		"As", "On", "By", "Asc", "Desc", "And", "Or", "Null", "Left", "Right", 
		"Inner", "Full", "Cross", "Not", "Like", "Is", "With", "Union", "All", 
		"Int", "Float", "Datetime", "Varchar", "Max", "Identifier", "IntegerConstant", 
		"FloatingConstant", "StringLiteral"
	};
	public static final int
		RULE_varcharType = 0, RULE_varcharTypeIntMax = 1, RULE_varcharTypeMax = 2, 
		RULE_varcharTypeNoMax = 3, RULE_intType = 4, RULE_floatType = 5, RULE_datetimeType = 6, 
		RULE_dataType = 7, RULE_sqlIdentifier = 8, RULE_fullStatement = 9, RULE_dataStatement = 10, 
		RULE_unionStatement = 11, RULE_cteStatementHead = 12, RULE_cteStatementBlock = 13, 
		RULE_cteStatement = 14, RULE_statement = 15, RULE_selectStatement = 16, 
		RULE_fromStatement = 17, RULE_joinType = 18, RULE_joinStatement = 19, 
		RULE_whereStatement = 20, RULE_orderStatement = 21, RULE_primaryValue = 22, 
		RULE_stringValue = 23, RULE_numericValue = 24, RULE_integerValue = 25, 
		RULE_floatingValue = 26, RULE_functionValue = 27, RULE_queryValue = 28, 
		RULE_argument = 29, RULE_argumentList = 30, RULE_aliasedValue = 31, RULE_value = 32, 
		RULE_allFields = 33, RULE_allTableFields = 34, RULE_field = 35, RULE_table = 36, 
		RULE_tableField = 37, RULE_valueList = 38, RULE_source = 39, RULE_tableSource = 40, 
		RULE_aliasedTable = 41, RULE_aliasedStatement = 42, RULE_aliasedSource = 43, 
		RULE_sourceList = 44, RULE_defaultOrderValue = 45, RULE_ascOrderValue = 46, 
		RULE_descOrderValue = 47, RULE_orderValue = 48, RULE_orderList = 49, RULE_condition = 50, 
		RULE_logicalOrCondition = 51, RULE_logicalAndCondition = 52, RULE_notCondition = 53, 
		RULE_comparativeCondition = 54, RULE_equalCondition = 55, RULE_unequalCondition = 56, 
		RULE_lessCondition = 57, RULE_lessThanCondition = 58, RULE_greaterCondition = 59, 
		RULE_greaterThanCondition = 60, RULE_likeCondition = 61, RULE_isNullCondition = 62, 
		RULE_expression = 63, RULE_additiveExpression = 64, RULE_additiveOperator = 65, 
		RULE_multiplicativeExpression = 66, RULE_multiplicativeOperator = 67, 
		RULE_negateExpression = 68, RULE_negateOperator = 69, RULE_primaryExpression = 70, 
		RULE_parExpression = 71;
	public static final String[] ruleNames = {
		"varcharType", "varcharTypeIntMax", "varcharTypeMax", "varcharTypeNoMax", 
		"intType", "floatType", "datetimeType", "dataType", "sqlIdentifier", "fullStatement", 
		"dataStatement", "unionStatement", "cteStatementHead", "cteStatementBlock", 
		"cteStatement", "statement", "selectStatement", "fromStatement", "joinType", 
		"joinStatement", "whereStatement", "orderStatement", "primaryValue", "stringValue", 
		"numericValue", "integerValue", "floatingValue", "functionValue", "queryValue", 
		"argument", "argumentList", "aliasedValue", "value", "allFields", "allTableFields", 
		"field", "table", "tableField", "valueList", "source", "tableSource", 
		"aliasedTable", "aliasedStatement", "aliasedSource", "sourceList", "defaultOrderValue", 
		"ascOrderValue", "descOrderValue", "orderValue", "orderList", "condition", 
		"logicalOrCondition", "logicalAndCondition", "notCondition", "comparativeCondition", 
		"equalCondition", "unequalCondition", "lessCondition", "lessThanCondition", 
		"greaterCondition", "greaterThanCondition", "likeCondition", "isNullCondition", 
		"expression", "additiveExpression", "additiveOperator", "multiplicativeExpression", 
		"multiplicativeOperator", "negateExpression", "negateOperator", "primaryExpression", 
		"parExpression"
	};

	@Override
	public String getGrammarFileName() { return "Sql.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class VarcharTypeContext extends ParserRuleContext {
		public VarcharTypeNoMaxContext varcharTypeNoMax() {
			return getRuleContext(VarcharTypeNoMaxContext.class,0);
		}
		public VarcharTypeMaxContext varcharTypeMax() {
			return getRuleContext(VarcharTypeMaxContext.class,0);
		}
		public VarcharTypeIntMaxContext varcharTypeIntMax() {
			return getRuleContext(VarcharTypeIntMaxContext.class,0);
		}
		public VarcharTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varcharType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterVarcharType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitVarcharType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitVarcharType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarcharTypeContext varcharType() throws RecognitionException {
		VarcharTypeContext _localctx = new VarcharTypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_varcharType);
		try {
			setState(147);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(144); varcharTypeIntMax();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(145); varcharTypeMax();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(146); varcharTypeNoMax();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarcharTypeIntMaxContext extends ParserRuleContext {
		public TerminalNode Varchar() { return getToken(SqlParser.Varchar, 0); }
		public TerminalNode IntegerConstant() { return getToken(SqlParser.IntegerConstant, 0); }
		public VarcharTypeIntMaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varcharTypeIntMax; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterVarcharTypeIntMax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitVarcharTypeIntMax(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitVarcharTypeIntMax(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarcharTypeIntMaxContext varcharTypeIntMax() throws RecognitionException {
		VarcharTypeIntMaxContext _localctx = new VarcharTypeIntMaxContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_varcharTypeIntMax);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); match(Varchar);
			setState(150); match(T__6);
			setState(151); match(IntegerConstant);
			setState(152); match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarcharTypeMaxContext extends ParserRuleContext {
		public TerminalNode Max() { return getToken(SqlParser.Max, 0); }
		public TerminalNode Varchar() { return getToken(SqlParser.Varchar, 0); }
		public VarcharTypeMaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varcharTypeMax; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterVarcharTypeMax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitVarcharTypeMax(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitVarcharTypeMax(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarcharTypeMaxContext varcharTypeMax() throws RecognitionException {
		VarcharTypeMaxContext _localctx = new VarcharTypeMaxContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varcharTypeMax);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154); match(Varchar);
			setState(155); match(T__6);
			setState(156); match(Max);
			setState(157); match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarcharTypeNoMaxContext extends ParserRuleContext {
		public TerminalNode Varchar() { return getToken(SqlParser.Varchar, 0); }
		public VarcharTypeNoMaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varcharTypeNoMax; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterVarcharTypeNoMax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitVarcharTypeNoMax(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitVarcharTypeNoMax(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarcharTypeNoMaxContext varcharTypeNoMax() throws RecognitionException {
		VarcharTypeNoMaxContext _localctx = new VarcharTypeNoMaxContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varcharTypeNoMax);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159); match(Varchar);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntTypeContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(SqlParser.Int, 0); }
		public IntTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterIntType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitIntType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitIntType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntTypeContext intType() throws RecognitionException {
		IntTypeContext _localctx = new IntTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_intType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161); match(Int);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FloatTypeContext extends ParserRuleContext {
		public TerminalNode Float() { return getToken(SqlParser.Float, 0); }
		public FloatTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floatType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterFloatType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitFloatType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitFloatType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FloatTypeContext floatType() throws RecognitionException {
		FloatTypeContext _localctx = new FloatTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_floatType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163); match(Float);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatetimeTypeContext extends ParserRuleContext {
		public TerminalNode Datetime() { return getToken(SqlParser.Datetime, 0); }
		public DatetimeTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datetimeType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterDatetimeType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitDatetimeType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitDatetimeType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatetimeTypeContext datetimeType() throws RecognitionException {
		DatetimeTypeContext _localctx = new DatetimeTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_datetimeType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165); match(Datetime);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public IntTypeContext intType() {
			return getRuleContext(IntTypeContext.class,0);
		}
		public FloatTypeContext floatType() {
			return getRuleContext(FloatTypeContext.class,0);
		}
		public DatetimeTypeContext datetimeType() {
			return getRuleContext(DatetimeTypeContext.class,0);
		}
		public VarcharTypeContext varcharType() {
			return getRuleContext(VarcharTypeContext.class,0);
		}
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitDataType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitDataType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataTypeContext dataType() throws RecognitionException {
		DataTypeContext _localctx = new DataTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dataType);
		try {
			setState(171);
			switch (_input.LA(1)) {
			case Varchar:
				enterOuterAlt(_localctx, 1);
				{
				setState(167); varcharType();
				}
				break;
			case Int:
				enterOuterAlt(_localctx, 2);
				{
				setState(168); intType();
				}
				break;
			case Float:
				enterOuterAlt(_localctx, 3);
				{
				setState(169); floatType();
				}
				break;
			case Datetime:
				enterOuterAlt(_localctx, 4);
				{
				setState(170); datetimeType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlIdentifierContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(SqlParser.Identifier, 0); }
		public SqlIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterSqlIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitSqlIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitSqlIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlIdentifierContext sqlIdentifier() throws RecognitionException {
		SqlIdentifierContext _localctx = new SqlIdentifierContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sqlIdentifier);
		try {
			setState(177);
			switch (_input.LA(1)) {
			case T__13:
				enterOuterAlt(_localctx, 1);
				{
				setState(173); match(T__13);
				setState(174); match(Identifier);
				setState(175); match(T__10);
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(176); match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FullStatementContext extends ParserRuleContext {
		public OrderStatementContext orderStatement() {
			return getRuleContext(OrderStatementContext.class,0);
		}
		public DataStatementContext dataStatement() {
			return getRuleContext(DataStatementContext.class,0);
		}
		public FullStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterFullStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitFullStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitFullStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FullStatementContext fullStatement() throws RecognitionException {
		FullStatementContext _localctx = new FullStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fullStatement);
		try {
			setState(183);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(179); dataStatement();
				setState(180); orderStatement();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(182); dataStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataStatementContext extends ParserRuleContext {
		public CteStatementHeadContext cteStatementHead() {
			return getRuleContext(CteStatementHeadContext.class,0);
		}
		public UnionStatementContext unionStatement() {
			return getRuleContext(UnionStatementContext.class,0);
		}
		public DataStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterDataStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitDataStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitDataStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataStatementContext dataStatement() throws RecognitionException {
		DataStatementContext _localctx = new DataStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_dataStatement);
		try {
			setState(189);
			switch (_input.LA(1)) {
			case With:
				enterOuterAlt(_localctx, 1);
				{
				setState(185); cteStatementHead();
				setState(186); unionStatement(0);
				}
				break;
			case Select:
				enterOuterAlt(_localctx, 2);
				{
				setState(188); unionStatement(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnionStatementContext extends ParserRuleContext {
		public TerminalNode Union() { return getToken(SqlParser.Union, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public UnionStatementContext unionStatement() {
			return getRuleContext(UnionStatementContext.class,0);
		}
		public TerminalNode All() { return getToken(SqlParser.All, 0); }
		public UnionStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unionStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterUnionStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitUnionStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlVisitor ) return ((SqlVisitor<? extends T>)visitor).visitUnionStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnionStatementContext unionStatement() throws RecognitionException {
		return unionStatement(0);
	}

	private UnionStatementContext unionStatement(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		UnionStatementContext _localctx = new UnionStatementContext(_ctx, _parentState);
		UnionStatementContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_unionStatement, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(192); statement();
			}
			_ctx.stop = _input.LT(-1);
			setState(200);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new UnionStatementContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_unionStatement);
					setState(194);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(195); match(Union);
					setState(196); match(All);
					setState(197); statement();
					}
					} 
				}
				setState(202);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CteStatementHeadContext extends ParserRuleContext {
		public CteStatementBlockContext cteStatementBlock() {
			return getRuleContext(CteStatementBlockContext.class,0);
		}
		public TerminalNode With() { return getToken(SqlParser.With, 0); }
		public CteStatementHeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cteStatementHead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).enterCteStatementHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlListener ) ((SqlListener)listener).exitCteStatementHead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
